--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2025 **Mobile Hub** | All Rights Reserved</p>
+            <p>&copy; 2025 Made with love for your mobile needs ❤️ </p>
             <div class="footer-links">
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms of Use</a>
@@ -65,3 +65,4 @@
 </body>
 
 </html>
+
